turtleart.polygon7.Polygon7.scala.error
Erreur de compilation :
Polygon7:2: error: not found: value n
  for(i<-1 to n)
              ^