turtleart.polygon7.Polygon7.scala.code
override def run() {
  for(i<-1 to n)
  	{
      avance(80)
      droite(360.0/7.0)
    }
}